; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_image.c_saturate_exposure_image.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_image.c_saturate_exposure_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @saturate_exposure_image(i32 %0, float %1, float %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  store i32 %0, i32* %4, align 4
  store float %1, float* %5, align 4
  store float %2, float* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @rgb_to_hsv(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load float, float* %5, align 4
  %11 = call i32 @scale_image_channel(i32 %9, i32 1, float %10)
  %12 = load i32, i32* %4, align 4
  %13 = load float, float* %6, align 4
  %14 = call i32 @scale_image_channel(i32 %12, i32 2, float %13)
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @hsv_to_rgb(i32 %15)
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @constrain_image(i32 %17)
  ret void
}

declare dso_local i32 @rgb_to_hsv(i32) #1

declare dso_local i32 @scale_image_channel(i32, i32, float) #1

declare dso_local i32 @hsv_to_rgb(i32) #1

declare dso_local i32 @constrain_image(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
